--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="シンガーソングライター灯橙あかさんのラブソング「抱き寄せても」を紹介します"
     />
     <title>抱き寄せても</title>
-    <meta property="og:url" content="https://levure-s.github.io/PeterPan/" />
+    <meta property="og:url" content="https://levure-s.github.io/Dakiyosetemo/" />
     <meta property="og:title" content="「抱き寄せても」紹介サイト" />
     <meta property="og:type" content="article" />
     <meta
@@ -17,7 +17,7 @@
     />
     <meta
       property="og:image"
-      content="https://levure-s.github.io/PeterPan/img/E2e7jGdVcAIalzJ.jpg"
+      content="https://levure-s.github.io/Dakiyosetemo/img/FT7yBxsakAExRnX.jpg"
     />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@8J6pxh2o0XB5lN9" />
