add_cast_and_staff

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             </div>
           </div>
           <div class="contents staff">
-            <p class="caption">Singer</p>
+            <p class="caption">Cast & Staff</p>
             <div class="flex_container">
               <div class="img_container">
                 <img src="./img/FTB_s_YaMAAQ_pd.jpg" alt="灯橙あか" />
@@ -161,20 +161,107 @@
                 </p>
               </div>
             </div>
-            <!-- <div class="flex_container">
+            <div class="flex_container">
               <div class="flex_container">
                 <div class="img_container">
-                  <img src="./img/1623237937.jpg" alt="彩月" />
+                  <img src="./img/saki.jpg" alt="彩月" />
                 </div>
                 <div class="text_container">
                   <h2 class="name">彩月<span class="role">出演</span></h2>
                   <p>
                     女優/ミシェルエンターテイメント所属<br />
-                    20歳/151cm/香川県出身
+                    20歳/151cm/香川県出身<br>
+                    ◾︎芸門「大女優と七人の三文役者」<br>
+                    ▪︎abema「ヒロミ・指原恋のお世話始めました」<br>
+                    ▪︎灯橙あか MV「抱き寄せても」<br>
+                    ▪︎映画「女子高生に殺されたい」<br>
                   </p>
                 </div>
               </div>
-            </div> -->
+              <div class="flex_container">
+                <div class="img_container">
+                  <img src="./img/gamon.jpg" alt="我聞" />
+                </div>
+                <div class="text_container">
+                  <h2 class="name">我聞<span class="role">出演</span></h2>
+                  <p>
+                    俳優<br />
+                    2000.7.30生まれ　茨城県出身
+                  </p>
+                  <p>ブログより</p>
+                  <p>
+                    元々映画は好きだったのですが、第一回目の緊急事態宣言の時に、自分の存在意義を見失い、生きる為に映画をひたすらに見る日々を過ごしました。<br>
+                    そこで、映画という、最高の友達の存在を発見し、それ以来、映画という媒体の為に俳優をやっております。
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="flex_container">
+              <div class="text_container">
+                <h2 class="name">水野那央貴<span class="role">監督</span></h2>
+                <p>
+                  2015年OKNACK入社。<br>
+                  PMとして幾多のMV制作・現場に参加し、<br>
+                  2019年よりDirectorとしての活動を開始。
+                </p>
+              </div>
+              <div class="text_container">
+                <h2 class="name">池田直樹<span class="role">助監督</span></h2>
+                <p>
+                  株式会社HANDRED所属。<br>
+                  MVなど映像に関する仕事に携わる。<br>
+                </p>
+              </div>
+            </div>
+            <div class="flex_container">
+              <div class="text_container">
+                <h2 class="name">白根すみれ<span class="role">制作進行</span></h2>
+                <p>
+                  OKNACK所属。
+                </p>
+              </div>
+              <div class="text_container">
+                <h2 class="name">沖本拓也<span class="role">制作進行</span></h2>
+                <p>
+                  OKNACK所属。
+                </p>
+              </div>
+            </div>
+            <div class="flex_container single">
+              <div class="text_container">
+                <h2 class="name">株式会社HANDRED<span class="role break">制作協力</span></h2>
+              </div>
+            </div>
+            <div class="flex_container">
+              <div class="text_container">
+                <h2 class="name">足立タイセイ<span class="role">編曲</span></h2>
+                <p>
+                  バンドでのマニピュレーター、コンポーザーとしての活動を経て、2016年大学在学中に京都にてWhite Plum Studioを設立し、レコーディングエンジニアとしてのキャリアをスタートする。2018年3月、White Plum Studio Tokyoを設立。 現在は作曲編曲からレコーディング、ミックス、プロデュースまで活動は多岐に渡る。
+                </p>
+              </div>
+              <div class="text_container">
+                <h2 class="name">Yuuki Inoue<span class="role">編曲、ギター</span></h2>
+                <p>
+                  インスタグラムより
+                </p>
+                <p>
+                  音楽と猫と酒
+                </p>
+              </div>
+            </div>
+            <div class="flex_container">
+              <div class="text_container">
+                <h2 class="name">White Plum Studio Tokyo<span class="role break">MIX＆レコーディング</span></h2>
+              </div>
+              <div class="text_container">
+                <h2 class="name">Sushi Mizuno<span class="role">マスタリング</span></h2>
+                <p>
+                  Studio mass所属マスタリングエンジニア / バンドqujakuギター、パーカッション、シンセなど / 元ライブハウスkirchherオーナー。<br>
+                  deepNowではFuji Rock、Rising Sun等フェス出場し、向井太一のデビューシングル"POOL"をプロデュースするなど精力的に活動を行なっている。<br>
+                  現在では、Studio MASSパートナーとして月に20タイトル前後のミックス/マスタリングを担当している。
+                </p>
+              </div>
+            </div>
           </div>
           <div class="contents cd">
             <p class="caption">Album</p>
@@ -184,7 +271,7 @@
               </div>
               <div class="text_container">
                 <h2 class="name">
-                  The Labeling<span class="role">灯橙あか1stフルアルバム</span>
+                  The Labeling<span class="role break">灯橙あか1stフルアルバム</span>
                 </h2>
                 <p>
                   「抱き寄せても」が収録されているフルアルバム<br>
